# rgo-example

./: README.md  WORKSPACE  examples.R
R/rgo/: BUILD.bazel  DESCRIPTION  NAMESPACE
R/rgo/R/: examples.R  hello.R
R/rgo/src/: Makevars  examples.go  hello.c  init.c  main.go  rgo_types.go
go/src/: BUILD.bazel
go/src/hello/: BUILD.bazel  hello.go
go/src/rgo/: BUILD.bazel  examples.go  rgo_types.go
