load("@com_grail_rules_r//R:defs.bzl", "r_library", "r_pkg")

r_pkg(
    name = "rgo",
    srcs = glob(
        ["**"],
        exclude = glob([
            "BUILD.bazel",
            "src/Makevars",
            "src/*.go",
            "src/*.so",
            "src/rgo.h",
        ]),
    ),
    cc_deps = [
        "//go/src/rgo:rgo.cc",
    ],
)

r_library(
    name = "library",
    pkgs = ["rgo"],
)
