load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "hello.go",
        "main.go",
    ],
    cgo = True,
    importpath = "github.com/example/project/go/src/hello",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    linkmode = "c-archive",
    visibility = ["//visibility:public"],
)
